= BinData Changelog

== Version NEW_VERSION

* Added 64 bit integers.

== Version 0.5.1 (2007-03-21)

* Updated documentation.
* Struct now raises an error if a field name shadows an existing method.

== Version 0.5.0 (2007-03-14)

* Initial public release.