@@ -3,6 +3,7 @@
 == Version NEW_VERSION
 
 * Added 64 bit integers.
+* Added floating point numbers.
 
 == Version 0.5.1 (2007-03-21)
 
